--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -71,3 +71,11 @@
   -webkit-mask-image: var(--md-admonition-icon--methode);
           mask-image: var(--md-admonition-icon--methode);
 }
+
+iframe.exerciseur {
+  width: 100%;
+  height: 650px;
+  border: 1px solid #216C9A; 
+  border-radius:18px;
+  box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.1);
+}
