more CSV lesson wrote

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -66,6 +66,8 @@
   --md-admonition-icon--histoire: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M240.1 4.2c9.8-5.6 21.9-5.6 31.8 0l171.8 98.1L448 104l0 .9 47.9 27.4c12.6 7.2 18.8 22 15.1 36s-16.4 23.8-30.9 23.8L32 192c-14.5 0-27.2-9.8-30.9-23.8s2.5-28.8 15.1-36L64 104.9l0-.9 4.4-1.6L240.1 4.2zM64 224l64 0 0 192 40 0 0-192 64 0 0 192 48 0 0-192 64 0 0 192 40 0 0-192 64 0 0 196.3c.6 .3 1.2 .7 1.8 1.1l48 32c11.7 7.8 17 22.4 12.9 35.9S494.1 512 480 512L32 512c-14.1 0-26.5-9.2-30.6-22.7s1.1-28.1 12.9-35.9l48-32c.6-.4 1.2-.7 1.8-1.1L64 224z"/></svg>');
   --md-admonition-icon--exopapier: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1 0 32c0 8.8 7.2 16 16 16l32 0zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z"/></svg>');
   --md-admonition-icon--exoordi: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M128 32C92.7 32 64 60.7 64 96l0 256 64 0 0-256 384 0 0 256 64 0 0-256c0-35.3-28.7-64-64-64L128 32zM19.2 384C8.6 384 0 392.6 0 403.2C0 445.6 34.4 480 76.8 480l486.4 0c42.4 0 76.8-34.4 76.8-76.8c0-10.6-8.6-19.2-19.2-19.2L19.2 384z"/></svg>');
+  --md-admonition-icon--python: url("../assets/python.svg");
+  --md-admonition-icon--expert: url("../assets/brain_connected.svg");
 }
 
 .md-typeset .admonition.methode,
@@ -156,6 +158,42 @@
   background-color: #77db2b;
   -webkit-mask-image: var(--md-admonition-icon--exoordi);
           mask-image: var(--md-admonition-icon--exoordi);
+}
+
+/*Admonition PYTHON*/
+.md-typeset .admonition.python,
+.md-typeset details.python {
+  border-color: #F7C539;
+}
+
+.md-typeset .python > .admonition-title,
+.md-typeset .python > summary {
+  background-color: #f7c43929;
+}
+
+.md-typeset .python > .admonition-title::before,
+.md-typeset .python > summary::before {
+  background-color: #F7C539;
+  -webkit-mask-image: var(--md-admonition-icon--python);
+          mask-image: var(--md-admonition-icon--python);
+}
+
+/*Admonition EXPERT*/
+.md-typeset .admonition.expert,
+.md-typeset details.expert {
+  border-color: #f11936;
+}
+
+.md-typeset .expert > .admonition-title,
+.md-typeset .expert > summary {
+  background-color: #f1193617;
+}
+
+.md-typeset .expert > .admonition-title::before,
+.md-typeset .expert > summary::before {
+  background-color: #f11936;
+  -webkit-mask-image: var(--md-admonition-icon--expert);
+          mask-image: var(--md-admonition-icon--expert);
 }
 
 /* */
