--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -58,7 +58,7 @@
   display: none;
 }
 
-/*Custom admonition : methode*/
+/*IMAGES des Admonitions*/
 :root {
   /* Définir l'icône personnalisée pour l'admonition méthode */
   --md-admonition-icon--methode: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M469.3 19.3l23.4 23.4c25 25 25 65.5 0 90.5l-56.4 56.4L322.3 75.7l56.4-56.4c25-25 65.5-25 90.5 0zM44.9 353.2L299.7 98.3 413.7 212.3 158.8 467.1c-6.7 6.7-15.1 11.6-24.2 14.2l-104 29.7c-8.4 2.4-17.4 .1-23.6-6.1s-8.5-15.2-6.1-23.6l29.7-104c2.6-9.2 7.5-17.5 14.2-24.2zM249.4 103.4L103.4 249.4 16 161.9c-18.7-18.7-18.7-49.1 0-67.9L94.1 16c18.7-18.7 49.1-18.7 67.9 0l19.8 19.8c-.3 .3-.7 .6-1 .9l-64 64c-6.2 6.2-6.2 16.4 0 22.6s16.4 6.2 22.6 0l64-64c.3-.3 .6-.7 .9-1l45.1 45.1zM408.6 262.6l45.1 45.1c-.3 .3-.7 .6-1 .9l-64 64c-6.2 6.2-6.2 16.4 0 22.6s16.4 6.2 22.6 0l64-64c.3-.3 .6-.7 .9-1L496 350.1c18.7 18.7 18.7 49.1 0 67.9L417.9 496c-18.7 18.7-49.1 18.7-67.9 0l-87.4-87.4L408.6 262.6z"/></svg>');
@@ -68,8 +68,10 @@
   --md-admonition-icon--exoordi: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M128 32C92.7 32 64 60.7 64 96l0 256 64 0 0-256 384 0 0 256 64 0 0-256c0-35.3-28.7-64-64-64L128 32zM19.2 384C8.6 384 0 392.6 0 403.2C0 445.6 34.4 480 76.8 480l486.4 0c42.4 0 76.8-34.4 76.8-76.8c0-10.6-8.6-19.2-19.2-19.2L19.2 384z"/></svg>');
   --md-admonition-icon--python: url("../assets/python.svg");
   --md-admonition-icon--expert: url("../assets/brain_connected.svg");
+  --md-admonition-icon--propriete: url("../assets/gears-solid.svg");
 }
 
+/*Admonition METHODE*/
 .md-typeset .admonition.methode,
 .md-typeset details.methode {
   border-color: #009900; /* Couleur de la bordure */
@@ -196,6 +198,24 @@
           mask-image: var(--md-admonition-icon--expert);
 }
 
+/*Admonition PROPRIETE*/
+.md-typeset .admonition.propriete,
+.md-typeset details.propriete {
+  border-color: #f11936;
+}
+
+.md-typeset .propriete > .admonition-title,
+.md-typeset .propriete > summary {
+  background-color: #f1193617;
+}
+
+.md-typeset .propriete > .admonition-title::before,
+.md-typeset .propriete > summary::before {
+  background-color: #f11936;
+  -webkit-mask-image: var(--md-admonition-icon--propriete);
+          mask-image: var(--md-admonition-icon--propriete);
+}
+
 /* */
 
 iframe.exerciseur {
@@ -212,3 +232,4 @@ img.image {
   border: 1px solid #5c1aac; 
   max-width: 100%;
 }
+
